<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fillBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_team_1"
            style="@style/EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_team_a"
            android:inputType="text" />

        <EditText
            android:id="@+id/name_team_2"
            style="@style/EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_team_b"
            android:inputType="text" />

        <EditText
            android:id="@+id/game_time"
            style="@style/EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/timer_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/start_game"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:background="@drawable/play_button"
            android:backgroundTint="@color/fillGray"
            android:padding="@dimen/dp10"
            android:text="@string/start_game" />

    </LinearLayout>
</ScrollView>