<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backdround_game"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10">

        <LinearLayout
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp300"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_team_1"
                style="@style/TextViewScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/idle_1"
                    android:layout_width="@dimen/dp60"
                    android:layout_height="@dimen/dp80"
                    android:layout_marginTop="@dimen/dp40"
                    android:background="@android:color/white"
                    android:src="@drawable/idle" />

                <ImageView
                    android:id="@+id/idle_2"
                    android:layout_width="@dimen/dp60"
                    android:layout_height="@dimen/dp80"
                    android:layout_marginTop="@dimen/dp40"
                    android:layout_toEndOf="@id/idle_1"
                    android:background="@android:color/white"
                    android:src="@drawable/idle2" />

                <ImageView
                    android:id="@+id/play_1"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp100"
                    android:layout_below="@id/idle_1"
                    android:layout_marginTop="@dimen/dp30"
                    android:background="@android:color/white"
                    android:scaleType="centerInside"
                    android:src="@drawable/play1"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/play_2"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp100"
                    android:layout_below="@id/idle_2"
                    android:layout_marginTop="@dimen/dp30"
                    android:layout_toEndOf="@id/play_1"
                    android:background="@android:color/white"
                    android:src="@drawable/play2"
                    android:visibility="invisible" />
            </RelativeLayout>

            <TextView
                android:id="@+id/score_team_2"
                style="@style/TextViewScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />


        </LinearLayout>


        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upper"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp10"
            android:background="@color/fillYellow"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:textColor="@color/stroke"
            android:textSize="@dimen/sp24" />

        <Button
            android:id="@+id/btn_goal_1"
            style="@style/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:text="@string/goal" />

        <Button
            android:id="@+id/btn_goal_2"
            style="@style/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:text="@string/goal" />

        <Button
            android:id="@+id/btn_touch_1"
            style="@style/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_goal_1"
            android:text="@string/touchdown" />

        <Button
            android:id="@+id/btn_touch_2"
            style="@style/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_goal_2"
            android:text="@string/touchdown" />

        <Button
            android:id="@+id/btn_extra_1"
            style="@style/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_touch_1"
            android:text="@string/extra" />

        <Button
            android:id="@+id/btn_extra_2"
            style="@style/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_touch_2"
            android:text="@string/extra" />

        <Button
            android:id="@+id/btn_foul_1"
            style="@style/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_extra_1"
            android:text="@string/foul" />

        <Button
            android:id="@+id/btn_foul_2"
            style="@style/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_extra_2"
            android:text="@string/foul" />

        <Button
            android:id="@+id/btn_safety_1"
            style="@style/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_foul_1"
            android:text="@string/safety" />

        <Button
            android:id="@+id/btn_safety_2"
            style="@style/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_foul_2"
            android:text="@string/safety" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp50"
            android:layout_below="@id/btn_safety_2"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp10"
            android:background="@drawable/play_button"
            android:text="@string/reset" />


    </RelativeLayout>
</ScrollView>
